# predictive-parser

./: .gitignore  README.md  predictive.py  pyproject.toml
docs/: actions.md  concepts.md  grammar.md  tutorial.md
example/: table.py
examples/: calculator.py  custom_ast.py  errors.py  example0.py  first.py  follow.py  lisp_interpreter.py  matching_inputs.py  nullable.py  parse_tree.py  predictive.py  table.py
predictive_parser/: __init__.py  actions.py  cli.py  errors.py  grammar.py  lexer.py  parser.py  serialization.py  sets.py  table.py  transforms.py  tree.py
tests/: test_actions.py  test_cli.py  test_coverage.py  test_errors.py  test_grammar_dsl.py  test_lexer.py  test_llk.py  test_predictive.py  test_property.py  test_serialization.py  test_streaming.py  test_transforms.py  test_tree.py
