[project]
name = "predictive-parser"
version = "1.0.0"
description = "A small, dependency-free LL(1) predictive parser for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Victor C. Martins", email = "vctormartins1@gmail.com" },
]
keywords = ["parser", "ll1", "predictive", "grammar", "compiler", "parsing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dxhj/predictive-parser"
Repository = "https://github.com/dxhj/predictive-parser"
Issues = "https://github.com/dxhj/predictive-parser/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["predictive.py"]

[tool.hatch.build.targets.sdist]
include = ["predictive.py", "README.md", "LICENSE", "tests/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["predictive.py"]
